# konpac

./: Cargo.toml  README.md  makefile
.VSCodeCounter/2025-02-27_23-27-12/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-02-28_00-00-52/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-02-28_11-50-37/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-02-28_13-42-22/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
example/: lmms-1.2.2.kpkg  repos
example/lmms/: package.yml
example/lmms/scripts/: install
example/package/: package.yml
example/xmnf/: install  package.yml
example/xmnf/scripts/: install
src/: main.rs  package.rs  repo.rs
src/consts/: paths.rs
src/package/: build.rs  depencies.rs  install.rs  remove.rs  update.rs  utils.rs
src/repo/: gen.rs  utils.rs
