[package]
name = "konpac"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.30", features = ["derive"]}
flate2 = "1.0.35"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
libc = "0.2.169"
reqwest = "0.12.12"
rusqlite = {version = "0.33.0", features = ["bundled"]}
rust-ini = "0.21.1"
sha2 = "0.10.8"
tar = "0.4.43"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
version-compare = "0.2.0"
walkdir = "2.5.0"
yaml-rust2 = "0.10.0"
